src/test/ui/issues/issue-68091-unicode-ident-after-if.stderr
error: missing condition for `if` expression
  --> $DIR/issue-68091-unicode-ident-after-if.rs:3:14
   |
LL |         $($c)รถ* {}
   |              ^ expected if condition here

error: aborting due to previous error

